Fix extra space on social div obscuring Games link

--- a/_less/core-layout.less
+++ b/_less/core-layout.less
@@ -61,7 +61,7 @@
 		position: absolute;
 		left: 414px;
 		top: 25px;
-		width: 200px;
+		width: 150px;
 		height: 40px;
 
 		> li {
